[package]
name = "melantha"
version = "0.2.0"
authors = ["retrhelo <artyomliu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"

# for analysing toml config 
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"

# for loading command-line args 
clap = "2.33.3"

# for signal handling 
ctrlc = "3.1.9"